--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -1,7 +1,7 @@
 /* block specific CSS goes here */
 
 main .hero-container > div {
-  max-width: unset;
+  max-width: 100%;
 }
   
 main .hero-container {
