--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -37,3 +37,14 @@ main .hero img {
   width: 100%;
   height: 100%;
 }
+.hero-button{
+  color: black;
+  float: left;
+  border: 1.5px solid black;
+  padding: 12px 30px;
+  font-size: 14px;
+  font-family: "Arial", sans-serif;
+  background-color: white;
+  margin-left: 30px;
+  text-transform: uppercase;
+}
