--- a/blocks/tx-hero/tx-hero.css
+++ b/blocks/tx-hero/tx-hero.css
@@ -1,1 +1,58 @@
+main .tx-hero-container > div {
+  max-width: 100%;
+}
+  
+main .tx-hero-container {
+  padding: 0;
+}
+  
+main .tx-hero {
+  position: relative;
+  padding: 32px;
+  min-height: 300px;
+}
 
+main .tx-hero h1 {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+}
+
+main .tx-hero picture {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  object-fit: cover;
+  box-sizing: border-box;
+}
+
+main .tx-hero img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.hero-button{
+  color: black;
+  float: left;
+  border: 1.5px solid black;
+  padding: 8px 20px;
+  font-size: 14px;
+  font-family: "Arial", sans-serif;
+  background-color: white;
+  margin-left: 30px;
+  text-transform: uppercase;
+}
+#markets--economy{
+  margin-left: 30px;
+  font-size: 10;
+  text-transform: uppercase;
+}
+
+#textOne{
+  margin-left: 30px;
+  font-size: 15;
+}
