--- a/blocks/tx-hero/tx-hero.css
+++ b/blocks/tx-hero/tx-hero.css
@@ -14,7 +14,13 @@ main .tx-hero {
 
 main .tx-hero h1 {
   max-width: 1200px;
-  margin-left: auto;
+  margin-left: 30px;
+  margin-right: auto;
+  color: white;
+}
+main .tx-hero h3 {
+  max-width: 1200px;
+  margin-left: 30px;
   margin-right: auto;
   color: white;
 }
