--- a/blocks/tx-hero/tx-hero.css
+++ b/blocks/tx-hero/tx-hero.css
@@ -17,6 +17,7 @@ main .tx-hero p {
   margin-left: 30px;
   margin-right: auto;
   color: white;
+  font-size: 20;
 }
 main .tx-hero h3 {
   max-width: 1200px;
@@ -41,7 +42,7 @@ main .tx-hero img {
   width: 100%;
   height: 100%;
 }
-.hero-button{
+main .tx-hero .button-container{
   color: black;
   float: left;
   border: 1.5px solid black;
